--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="w-100 position-sticky top-0 py-3 px-3 bg-primary row m-auto align-items-center">
+<header class="w-100 position-sticky z-2 top-0 py-3 px-3 bg-primary row m-auto align-items-center">
     <div class="col-9">
         <span class="text-white"><img class="app-logo" src="Notas-logo.png"/> </span>
     </div>
@@ -12,7 +12,7 @@
         </button>
 
     </nav>
-    <div class="col-3 text-end">
+    <div class="col-3 text-end button-list">
         <button type="button" class="btn btn-secondary" (click)="toggleNav()">
             <i class="bi bi-list"></i>
         </button>
