--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,7 +15,7 @@
                 <label class="form-label mt-3 mb-3" for="password">Password</label>
                 <input type="password" class="form-control p-3 mb-5" id="password" placeholder="Contraseña">
             </div>
-            <button type="submit" class="btn btn-success mt-3 p-4 position-absolute" (click)="toggleInicio()">Submit</button>
+            <button type="submit" class="btn btn-success mt-3 p-4 position-absolute" (click)="enviarInicio()">Aceptar</button>
         </form>
     </div>
 </div>
