--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,13 +3,15 @@ i {
 }
 
 .app-logo {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
 
 }
 
 nav {
   display: none;
+
+
 
   &.active {
     display: block;
@@ -19,6 +21,7 @@ nav {
     top: 0;
     bottom: 0;
     right: 0;
+    z-index: 9;
 
     a:first-of-type {
       margin-top: 100px;
@@ -32,6 +35,17 @@ nav {
       top: 10px;
       right: 10px;
       padding: 6px 10px;
+      border-radius: 50%;
     }
+
+  }
+}
+
+.button-list {
+  button {
+    top: 10px;
+    right: 10px;
+    padding: 6px 10px;
+    border-radius: 50%;
   }
 }
