--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,1 +1,13 @@
-<p>inicio works!</p>
+<span><p class="mt-4 mx-4 fijadasTitle fs-2 fw-bold">Fijadas</p></span>
+<div class="card mx-auto my-4 nota-body">
+    <div class="card-body">
+        <div class="d-flex">
+            <i class="bi bi-check-circle text-success px-2"></i>
+            <p class="card-title">Cumpleaños.</p>
+        </div>
+        <div class="d-flex">
+        <p class="card-text px-2 col-6">23/11/2024</p>
+        <p class="text-end col-6">Preview de la nota...</p>
+        </div>
+    </div>
+</div>
