--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,13 +1,51 @@
 <span><p class="mt-4 mx-4 fijadasTitle fs-2 fw-bold">Fijadas</p></span>
 <div class="card mx-auto my-4 nota-body">
-    <div class="card-body">
+    <div class="card-body btn" (click)="abrirNota()">
         <div class="d-flex">
-            <i class="bi bi-check-circle text-success px-2"></i>
-            <p class="card-title">Cumpleaños.</p>
+            <p class="card-title fw-bold mx-2">Cumpleaños.</p>
         </div>
         <div class="d-flex">
-        <p class="card-text px-2 col-6">23/11/2024</p>
-        <p class="text-end col-6">Preview de la nota...</p>
+        <p class="card-text mx-2 ">(23/11/2024)</p>
+        <p class="text-end col-8">Preview de la nota...</p>
+        </div>
+    </div>
+</div>
+
+<span><p class="mt-4 mx-4 hoyTitle fs-2 fw-bold">Hoy</p></span>
+<div class="card mx-auto my-4 nota-body">
+    <div class="card-body btn" (click)="abrirNota()">
+        <div class="d-flex">
+            <p class="card-title fw-bold mx-2">Mercado.</p>
+        </div>
+        <div class="d-flex">
+            <p class="card-text mx-2">(21/11/2024)</p>
+            <p class="text-end col-8">Preview de la nota...</p>
+        </div>
+    </div>
+</div>
+
+<span><p class="mt-4 mx-4 ayerTitle fs-2 fw-bold">Ayer</p></span>
+<div class="card mx-auto my-4 nota-body">
+    <div class="card-body btn" (click)="abrirNota()">
+        <div class="d-flex">
+            <p class="card-title fw-bold mx-2">Cena.</p>
+        </div>
+        <div class="d-flex">
+            <p class="card-text mx-2">(20/11/2024)</p>
+            <p class="text-end col-8">Preview de la nota...</p>
+        </div>
+    </div>
+</div>
+
+<span><p class="mt-4 mx-4 hoyTitle fs-2 fw-bold">Últimos 7 días</p></span>
+<div class="card mx-auto my-4 nota-body">
+    <div class="card-body btn" (click)="abrirNota()">
+        <div class="d-flex">
+            <p class="card-title fw-bold mx-2">Medico.</p>
+        </div>
+        <div class="d-flex">
+            <p class="card-text mx-2">(17/11/2024)</p>
+            <p class="text-end col-8">Preview de la nota...</p>
         </div>
     </div>
 </div>
