--- a/src/app/nota-abierta/nota-abierta.component.html
+++ b/src/app/nota-abierta/nota-abierta.component.html
@@ -1,6 +1,6 @@
 <div class="w-100 h-40 position-fixed d-flex top-1 justify-content-between">
     <button class="boton-Atras d-flex" (click)="enviarAtrasInicio()">
-    <i class="bi bi-chevron-compact-left signo-Atras color-dark"></i>
+        <i class="bi bi-chevron-compact-left signo-Atras color-dark"></i>
         <p class="mb-0 notas-Text">Notas</p>
     </button>
 
@@ -15,13 +15,13 @@
     </nav>
 
     <div class="mt-2 mx-2">
-    <button class="btn btn-derecha mx-1"><i class="bi bi-arrow-90deg-left color-dark"></i></button>
-    <button class="btn btn-derecha mx-1"><i class="bi bi-arrow-90deg-right color-dark"></i></button>
-    <button class="btn btn-derecha mx-1"><i class="bi bi-box-arrow-up color-dark" (click)="toggleNav()"></i></button>
+        <button class="btn btn-derecha mx-1"><i class="bi bi-arrow-90deg-left color-dark"></i></button>
+        <button class="btn btn-derecha mx-1"><i class="bi bi-arrow-90deg-right color-dark"></i></button>
+        <button class="btn btn-derecha mx-1"><i class="bi bi-box-arrow-up color-dark" (click)="toggleNav()"></i></button>
     </div>
 </div>
 <div class="container row">
-    <span class="d-flex fw-bold fs-5"><p>Nota Nueva.</p></span>
+    <span class="d-flex fw-bold fs-5"><p>Titulo</p></span>
     <span class="fecha fw-semibold"><p>Fecha: (**/**/**).</p></span>
     <span><p>Lorem ipsum dolor sit amet consectetur. Leo velit morbi est suspendisse.
         Ut sit parturient nisl maecenas commodo volutpat urna. Nunc urna tempus aliquam amet pellentesque.
