--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div id="container" class="">
+<div class="container w-100 bg-black">
     <div class="m-0 w-100 py-4 px-4 bg-black text-white h-100 overflow-auto row justify-content-center">
         <div class="col-12 m-auto mt-5">
             <img src="Notas-logo.png" class="mx-auto d-block ">
@@ -6,16 +6,26 @@
         <div>
             <p class="text-center"><u>Introduzca su usuario y contraseña</u></p>
         </div>
-        <form class="col-12 mb-5">
+
+        <form [formGroup]="formularioLogin" (ngSubmit)="onSubmit()" class="col-12 mb-5">
             <div class="form-group">
-                <label class="form-label mb-3" for="username">Email address</label>
-                <input type="text" class="form-control p-3 mb-5" id="username" placeholder="Usuario">
+                <label class="form-label mb-3" for="username">Usuario o Correo Electronico</label>
+                <input type="text" class="form-control p-3 mb-5" id="username" formControlName="username" placeholder="Usuario/Email">
+                <div *ngIf="formularioLogin.get('username')?.invalid && formularioLogin.get('username')?.touched" class="text-danger">
+                    Por favor introduzca su usuario de al menos 4 caracteres.
+                </div>
             </div>
             <div class="form-group">
-                <label class="form-label mt-3 mb-3" for="password">Password</label>
-                <input type="password" class="form-control p-3 mb-5" id="password" placeholder="Contraseña">
+                <label class="form-label mt-3 mb-3" for="password">Contraseña</label>
+                <input type="password" class="form-control p-3 mb-5" id="password" formControlName="password" placeholder="Contraseña">
+                <div *ngIf="formularioLogin.get('password')?.invalid && formularioLogin.get('password')?.touched" class="text-danger mb-3">
+                    Por favor introduzca su contraseña de al menos 4 caracteres.
+                </div>
             </div>
-            <button type="submit" class="btn btn-success mt-3 p-4 position-absolute" (click)="enviarInicio()">Aceptar</button>
+            <button type="submit" class="btn btn-success mt-3 p-4 position-absolute" [disabled]="formularioLogin.invalid">Iniciar Sesión</button>
+            <div class="text-center mt-3">
+                ¿No tienes una cuenta? <a (click)="enviarARegistro()" class="text-white">Regístrate.</a>
+            </div>
         </form>
     </div>
 </div>
