--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -6,14 +6,12 @@
 
  }
 
- #container {
+ .container {
    width: 100%;
    height: 100dvh;
    position: relative;
 
-   > div {
 
-   }
  }
 
  button[type="submit"] {
