--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -49,4 +49,9 @@
         </div>
     </div>
 </div>
-<app-footer></app-footer>
+<div>
+    <app-boton-examen></app-boton-examen>
+</div>
+<div>
+    <app-footer></app-footer>
+</div>
