--- a/src/app/detalles-tarea-examen/detalles-tarea-examen.component.html
+++ b/src/app/detalles-tarea-examen/detalles-tarea-examen.component.html
@@ -3,15 +3,17 @@
     <i class="bi bi-chevron-compact-left signo-Atras color-dark"></i>
     <p class="mb-0 notas-Text">Atras</p>
 </button>
+
+<div class="justify-content-center shadow-sm py-4 px-3 rounded-3 cuadroDato text-center">
+
+    <p>ID: {{ tarea?.id }}</p>
+    <p>Nombre: {{ tarea?.nombre }}</p>
+    <p>Descripción: {{ tarea?.descripcion }}</p>
+    <p>Estado: {{ tarea?.estado }}</p>
+
+</div>
 <!--<div class="container" *ngIf="listas.length > 0">
     <div class="lista" *ngFor="let lista of listas.selected">
-
-        </button>
-
-        <p>{{ lista.id }}</p>
-        <p>{{ lista.nombre }}</p>
-        <p>{{ lista.descripcion }}</p>
-        <p>{{ lista.estado }}</p>
 
 
         <button type="button" (click)="toggleShow()">Ver Información.</button>
